feat: add computer algorithm_tmp